tests/ucc/type/good/cast-int-to-ptr.c
int main(void)
{
    int a;
    int *b = &a;

    b = (int*)a;

    return 0;
}
