tests/ucc/type/bad/switch-vs-ptr.c
int main(void)
{
    int* a;

    switch (a)
    {

    };

    return 0;
}
